image button override due to spacing issue

--- a/source/_patterns/02-molecules/buttons/image-buttons/_image-button.scss
+++ b/source/_patterns/02-molecules/buttons/image-buttons/_image-button.scss
@@ -104,6 +104,11 @@ $image-button-size--large: 300px;
       outline: none;
       background: transparentize($dark-blue, 0.1);
     }
+
+    //overrides file extension style in link atom css
+    &:after {
+      content: "";
+    }
   }
 }
 
